# PoC1

./: .env  main.py  pyproject.toml  requirement.txt  requirements.txt
src/agent/: api.py  main.py
src/api/: main.py
src/notebooks/: main.ipynb
src/prompts/: main.py
src/schema/: main.py
